# aybabtu

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.rst  NEWS.rst  README.rst  buildbot.py  config.py  lock_version_resolve.json  resolve.json  wscript
.github/workflows/: raspberry_pi.yml
benchmarks/: plot.py  requirements.in  requirements.txt  throughput.cpp  wscript_build
examples/: example.cpp  wscript_build
src/aybabtu/: base64.cpp  base64.hpp  base64_avx2.cpp  base64_avx2.hpp  base64_basic.cpp  base64_basic.hpp  simd.hpp  version.cpp  version.hpp  wscript_build
src/aybabtu/detail/: base64_avx2.cpp  base64_avx2.hpp  base64_basic.cpp  base64_basic.hpp  base64_decode.hpp  base64_encode.hpp  base64_neon.cpp  base64_neon.hpp  base64_ssse3.cpp  base64_ssse3.hpp  tables.cpp  tables.hpp
test/: wscript_build
test/src/: test_base64.cpp
